--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+
+body {
+	background-image: url(Images/grey-brick-m.jpg);
+	background-attachment: fixed;
+	}
 
 #fancy-bg {
-	font-family:'Oswald',cursive;
-	font-size:6vw;
-	background-image:url(Images/grey-brick.jpg);
-	color:#e6e6e6;
-	border:2px solid #e6e6e6;
+	font-family:'Alfa Slab One',cursive;
+	font-size:2vw;
+	color:#ffffff;
+
+	width:20vw;
+	padding:1vw;
+	margin:1vw;
 	}
+
+@media only screen and (max-width: 700px){
+	body{
+		background-image: url(Images/grey-brick-s.jpg);
+		}
+	}
+
