--- a/style.css
+++ b/style.css
@@ -6,11 +6,19 @@ body {
 	background-image: url(Images/grey-brick-m.jpg);
 	background-attachment: fixed;
 	}
-
+div.ful-page {
+	/*width:100%;
+	height:100%;*/
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	min-height: 100vh;
+	}
 div.surr {
 	background: rgba(224, 224, 209, 0.2);
-	width: 500px;
-	border: 5px solid green;
+	width: 50%;
+	border: 2px solid #001a33;
 	padding: 5px;
 	margin: auto;
 	/*clear: both;*/
@@ -36,13 +44,13 @@ div.inn {
 
 .content1{
 	font-family:'Oswald',sans-serif;
-	font-size:150%;
+	font-size:2vw;
 	color:#e0e0d1;
 	}
 
 .title1 {
 	font-family:'Prata',serif;
-	font-size:250%;
+	font-size:3vw;
 	color:#ccccb3;
 	}
 
