--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 
 body {
-	background-image: url(Images/grey-brick-m.jpg);
+	background-image: url(Images/Skyscraper-scaled.jpeg);
 	background-attachment: fixed;
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position: center center;
 	}
 div.ful-page {
 	/*width:100%;
@@ -16,13 +19,14 @@ div.ful-page {
 	min-height: 97vh;
 	}
 .page-surr {
-	background: rgba(224, 224, 209, 0.2);
+	background: rgba(224, 224, 224, 0.4);
 	width: 50%;
-	border: 2px solid #001a33;
+	border: 0.3vw solid #001a33;
 	padding: 5px;
 	margin: auto;
 	/*clear: both;*/
 	display: flex;
+	
 	justify-content: center;
 	position: fixed;
 }
@@ -40,19 +44,22 @@ div.ful-page {
 .profile-img{
 	width:40%;
 	height:40%;
-	/*margin: 2vw;*/
+	border-radius: 50%;
+	margin: 0.3vw;
+	padding: 0.3vw;
+	border: 0.3vw solid #001a33;
 	}
 
 .content1{
 	font-family:'Oswald',sans-serif;
 	font-size:2vw;
-	color:#e0e0d1;
+	color:#001a33;
 	}
 
 .title1 {
 	font-family:'Prata',serif;
 	font-size:3vw;
-	color:#ccccb3;
+	color:#001a33;
 	}
 
 #fancy-bg {
@@ -65,9 +72,9 @@ div.ful-page {
 	margin:1vw;
 	}
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 2560px){
 	body{
-		background-image: url(Images/grey-brick-s.jpg);
+		background-size: cover ;
 		}
 	}
 
