--- a/style.css
+++ b/style.css
@@ -9,6 +9,21 @@ body {
 	background-repeat:no-repeat;
 	background-position: center center;
 	}
+
+#navbar {
+	width: 80%;
+	height: 5%;
+	
+	background: rgba(0, 26, 51, 0.8);
+	position: fixed;
+	left: 50%;
+	transform: translate(-50%, 0);
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
 div.ful-page {
 	/*width:100%;
 	height:100%;*/
@@ -26,7 +41,7 @@ div.ful-page {
 	margin: auto;
 	/*clear: both;*/
 	display: flex;
-	
+	flex-wrap: nowrap;
 	justify-content: center;
 	position: fixed;
 }
