--- a/style.css
+++ b/style.css
@@ -33,14 +33,18 @@ div.ful-page {
 	text-align: center;
 	min-height: 97vh;
 	}
+
 .page-surr {
 	background: rgba(224, 224, 224, 0.4);
-	width: 50%;
+	width: auto;
+	max-width: 70%;
+	max-height: 30%;
 	border: 0.3vw solid #001a33;
 	padding: 5px;
 	margin: auto;
 	/*clear: both;*/
 	display: flex;
+	align-items: center;
 	flex-wrap: nowrap;
 	justify-content: center;
 	position: fixed;
@@ -51,14 +55,15 @@ div.ful-page {
 	border: 9px solid green;*/
 	padding: 10px;
 	height: 30%;
+	max-width: 50vw;
 	/*margin: 2vw;
 	/*float: left;
 	display: block;*/
 }
 
 .profile-img{
-	width:40%;
-	height:40%;
+	width:15vw;
+	height:15vw;
 	border-radius: 50%;
 	margin: 0.3vw;
 	padding: 0.3vw;
