--- a/style.css
+++ b/style.css
@@ -9,12 +9,25 @@ body {
 	background-repeat:no-repeat;
 	background-position: center center;
 	}
+body::-webkit-scrollbar {
+	width: 0.5vw;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+	background: rgb(225, 225, 225);        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: rgba(0, 26, 51, 1);    /* color of the scroll thumb */
+	/*border-radius: 20px;       /* roundness of the scroll thumb */
+	/*border: 3px solid orange;  /* creates padding around scroll thumb */
+}
 
 #navbar {
 	width: 80%;
 	height: 5%;
 	
-	background: rgba(0, 26, 51, 0.8);
+	background: rgba(0, 26, 51, 1);
 	position: fixed;
 	left: 50%;
 	transform: translate(-50%, 0);
@@ -32,6 +45,17 @@ div.ful-page {
 	align-items: center;
 	text-align: center;
 	min-height: 97vh;
+	}
+
+.bg-overlay {
+	/* add a png gradient frame with this so its independent of bg placement */
+	width:100%;
+	height:100%;
+	position:fixed;
+	padding:0;
+	margin:0;
+	top:0;
+	left:0;
 	}
 
 .page-surr {
