--- a/style.css
+++ b/style.css
@@ -37,6 +37,21 @@ body::-webkit-scrollbar-thumb {
 	text-align: center;
 }
 
+.left-stick {
+	width: 2%;
+	height: 10%;
+	
+	background: rgba(0, 26, 51, 1);
+	position: fixed;
+	top: 50%;
+	/*left: 1.5%;*/
+	transform: translate(-50%, -50%);
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	}
+
 div.ful-page {
 	/*width:100%;
 	height:100%;*/
@@ -56,6 +71,7 @@ div.ful-page {
 	margin:0;
 	top:0;
 	left:0;
+	z-index: -1;
 	}
 
 .page-surr {
