--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
@@ -26,7 +28,7 @@ body::-webkit-scrollbar-thumb {
 #navbar {
 	width: 80%;
 	height: 5%;
-	
+	transition: height 0.2s ease-out 5ms;
 	background: #001a33;
 	position: fixed;
 	left: 50%;
@@ -35,7 +37,45 @@ body::-webkit-scrollbar-thumb {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	-webkit-mask-image: linear-gradient(90deg, transparent 5%, rgba(0, 0, 0, 1) 52%, rgba(0, 0, 0, 1) 44%, transparent 95%);
 }
+
+#navbar:hover {
+	height: 8%;
+}
+
+/* =============================================================== */
+
+.fa {
+	padding: 0.4vw;
+	font-size: 1.3vw;
+	width: 2vw;
+	
+	transition: height 0.2s ease-out 5ms, font-size 0.2s ease-out 5ms, width 0.2s ease-out 5ms;
+	height: 1vw;
+	text-align: center;
+	text-decoration: none;
+	margin: 1vw 0.4vw;
+	/*border: 0.1vw solid #ffffff;*/
+	}
+
+.fa:hover {
+	height: 1.7vw;
+	width: 2.7vw;
+	font-size: 2.0vw;
+	}
+
+.fa-linkedin {
+	background: #007bb5;
+	color: white;
+	}
+
+.fa-github {
+	background: #000000;
+	color: white;
+	}
+
+/* =============================================================== */
 
 .left-stick {
 	border: none;
@@ -43,7 +83,7 @@ body::-webkit-scrollbar-thumb {
 	width: 1.5%;
 	height: 10%;
 	transition: width 0.2s ease-out 5ms;	
-	background: #001a33;
+	background: rgba(0, 26, 51, 0.8);
 	position: fixed;
 	top: 50%;
 	left: 0%;
@@ -71,6 +111,9 @@ body::-webkit-scrollbar-thumb {
 	width: 3vw;
 	}
 
+.content {
+	}
+
 div.ful-page {
 	/*width:100%;
 	height:100%;*/
@@ -93,7 +136,7 @@ div.ful-page {
 	z-index: -1;
 	}
 
-.page-surr {
+.title-surr {
 	background: rgba(224, 224, 224, 0.4);
 	width: auto;
 	/*max-width: 70%;
@@ -106,11 +149,33 @@ div.ful-page {
 	margin: auto;
 	/*clear: both;*/
 	display: flex;
+	/*display: block; for phone use */
 	align-items: center;
 	flex-wrap: nowrap;
 	justify-content: center;
 	position: fixed;
 }
+
+.page-surr {
+	background: rgba(224, 224, 224, 0.8);
+	width: auto;
+	/*max-width: 70%;
+	max-height: 40%;*/
+	overflow:auto;
+	clear:both;
+
+	border: 0.3vw solid #001a33;
+	padding: 5px;
+	margin: auto;
+	/*clear: both;*/
+	display: flex;
+	/*display: block; for phone use */
+	align-items: center;
+	flex-wrap: nowrap;
+	justify-content: center;
+	position: fixed;
+}
+
 .inn {
 	/*background: rgba(224, 224, 209, 0.2);
 	/*width: auto;
